syntax = "proto3";
import "processor_message.proto";
import "memory_message.proto";
import "screen_message.proto";
import "keyboard_message.proto";
import "google/protobuf/timestamp.proto";
import "storage_message.proto";
package grpc_ex1;
option java_package = "com.grpc_ex1.pcbook.pb";
option java_multiple_files = true;


message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  // repeated creates a list of objects of a specific type
  repeated GPU gpus = 6;
repeated Storage storages  = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  // oneof sends only 1 value for whichever one is set
  oneof weight {
    double weight_kg = 10;
    double weight_lb = 11;
  }
  double price_used = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;

}